--- a/ubiquity/chrome/content/persistence.html
+++ b/ubiquity/chrome/content/persistence.html
@@ -103,7 +103,7 @@
   
     <h1>Persistence: <small>an exercise in a persistent Ubiquity</small></h1>
     
-    <p>What would Ubiquity look like in the Firefox chrome, so you didn't need a keystroke to pull it up? This test page is mean to be act as a playground where you can try out different designs and ideas. Submit your brilliant designs <a href='http://spreadsheets.google.com/viewform?formkey=dG1tamRCeHdhR3h2R1RxcWwyWFNnQnc6MA..' target='_new'>here</a>. Submitted designs can be seen <a href='http://spreadsheets.google.com/pub?key=tmmjdBxwaGxvGTqql2XSgBw&single=true&gid=1&output=html' target='_new'>here</a>.</p>
+    <p>What would Ubiquity look like in the Firefox chrome, so you didn't need a keystroke to pull it up? This test page is meant to be a playground where you can try out different designs and ideas. Submit your brilliant designs <a href='http://spreadsheets.google.com/viewform?formkey=dG1tamRCeHdhR3h2R1RxcWwyWFNnQnc6MA..' target='_new'>here</a>. Submitted designs can be seen <a href='http://spreadsheets.google.com/pub?key=tmmjdBxwaGxvGTqql2XSgBw&single=true&gid=1&output=html' target='_new'>here</a>.</p>
     
     <div class='warning' id='parser2' style='display:none'>You're not using Parser 2! Please <a href='chrome://ubiquity/content/settings.xhtml'>turn on Parser 2 (aka Next Generation Parser)</a>, restart Firefox, and try again.</div>
 
