persistence: cdata error

--- a/ubiquity/chrome/content/persistence.html
+++ b/ubiquity/chrome/content/persistence.html
@@ -112,7 +112,7 @@
 <div>
 <h2 class='toggle'>Setup ⨠</h2>
 
-<label for='onResults'><code>onResults</code> code:</label> <textarea style='width:100%' rows='8' id='onResults' name='onResults'><![CDATA// Access results with results.
+<label for='onResults'><code>onResults</code> code:</label> <textarea style='width:100%' rows='8' id='onResults' name='onResults'><![CDATA[// Access results with results.
 // Each result has its displayHtml, displayText, previewHtml, icon, and score properties.
 var html = [r.displayHtml for each (r in results)].join('<br/>');
 // Utils.log(results);
