--- a/ubiquity/chrome/content/persistence.html
+++ b/ubiquity/chrome/content/persistence.html
@@ -112,14 +112,14 @@
 <div>
 <h2 class='toggle'>Setup ⨠</h2>
 
-<label for='onResults'><code>onResults</code> code:</label> <textarea style='width:100%' rows='8' id='onResults' name='onResults'><![CDATA[// Access results with results.
+<label for='onResults'><code>onResults</code> code:</label> <textarea style='width:100%' rows='8' id='onResults' name='onResults'>// Access results with results.
 // Each result has its displayHtml, displayText, previewHtml, icon, and score properties.
 var html = [r.displayHtml for each (r in results)].join('<br/>');
 // Utils.log(results);
 // the results div is #results
 // the input div is #input
 jQuery('#results').html(html);
-jQuery('#results').show();]]>
+jQuery('#results').show();
 </textarea>
 
 <label for='onClose'><code>onClose</code> code: <small>(triggered by <code>ESC</code>)</small></label> <textarea style='width:100%' rows='8' id='onClose' name='onClose'>// access results with results
