persistence: minor updates

--- a/ubiquity/chrome/content/persistence.html
+++ b/ubiquity/chrome/content/persistence.html
@@ -110,7 +110,7 @@
     <div class='warning' id='gubiquity' style='display:none'><code>gUbiquity</code> was not loaded properly. Most likely this means you loaded this page at the same time that you loaded the window, and this page loaded before the window chrome, in which case you can just reload this page and it should work. Otherwise, there may actually be a problem with some code.</div>
 		
 <div>
-<h2 class='toggle'>Setup ⨠</h2>
+<h2 class='toggle'>Customize <small style='color:#ddd'>click to toggle</small></h2>
 
 <label for='onResults'><code>onResults</code> code:</label> <textarea style='width:100%' rows='8' id='onResults' name='onResults'>// Access results with results.
 // Each result has its displayHtml, displayText, previewHtml, icon, and score properties.
