persistence: css fix

--- a/ubiquity/chrome/content/persistence.html
+++ b/ubiquity/chrome/content/persistence.html
@@ -76,7 +76,7 @@
         padding: 30px 30px 60px 30px;
       }
       
-      #awesomebar * { display: inline-block }
+/*      #awesomebar { display: inline-block }*/
       
       input.input {
         border: none;
