i18n: patch 24 from lech, with a fix for the playpen

--- a/ubiquity/chrome/content/confirm-add-command.xhtml
+++ b/ubiquity/chrome/content/confirm-add-command.xhtml
@@ -87,7 +87,7 @@
 
   <div id="confirmationLongDesc">
     <p>&ubiquity.confirmsubscription.SubConfirmationLongPart1; <a href="chrome://ubiquity/content/cmdlist.xhtml">&ubiquity.confirmsubscription.SubConfirmationLongLinkText;</a> &ubiquity.confirmsubscription.SubConfirmationLongPart2;</p>
-    <p>You may now close this window.</p>
+    <p>&ubiquity.confirmsubscription.SubConfirmationComplete;</p>
   </div>
 </div>
 
