--- a/ubiquity/chrome/content/feed.xhtml
+++ b/ubiquity/chrome/content/feed.xhtml
@@ -13,12 +13,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>&ubiquity.redirect.FeedHeader;</title>
-	<link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/information-16.png"/>
-	<link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
+  <title>&ubiquity.redirect.FeedHeader;</title>
+  <link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/information-16.png"/>
+  <link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="chrome://ubiquity/content/ubiquityError.css" type="text/css" media="all" />
 
 </head>
-<body dir="&locale.dir;">
+<body dir="&locale.dir;" class="information">
 
 <script type="text/javascript">
 	<![CDATA[
@@ -41,7 +42,7 @@
 	]]>
 </script>
 
-<div id="errorPageContainer" style="background-image: url(chrome://global/skin/icons/information-64.png);">
+<div id="errorPageContainer">
 	<div id="errorTitle"><h1>&ubiquity.redirect.FeedHeader;</h1></div>
 
 	<div id="errorLongContent">
