--- a/ubiquity/chrome/content/tuner.xhtml
+++ b/ubiquity/chrome/content/tuner.xhtml
@@ -30,10 +30,10 @@
   <h1>&ubiquity.tuner.Header;</h1>
   <p>&ubiquity.tuner.ShortDesc;</p>
 
-  <div class="warning" id="parser2" style="display:none">&ubiquity.tuner.WarningParser2;</div>
-  <div class="warning" id="gubiquity" style="display:none">&ubiquity.tuner.WarningGUbiquity;</div>
+  <div class="warning" id="parser2" style="display:none">&ubiquity.error.WarningParser2;</div>
+  <div class="warning" id="gubiquity" style="display:none">&ubiquity.error.WarningGUbiquity;</div>
 
-  <h2>&ubiquity.tuner.HeaderSettings;</h2>
+  <h2>&ubiquity.common.HeaderSettings;</h2>
 
   <div>
     <!-- <input type="button" name="clearnouncache" value="clear noun cache" id="clearnouncache"></input> -->
@@ -44,12 +44,12 @@
     <!-- <input type="checkbox" name="noexternalcalls" id="noexternalcalls"></input><label for="noexternalcalls">only nountypes with no external calls</label> -->
 
     <input type="checkbox" name="autorun" id="autorun"></input>
-      <label for="autorun">&ubiquity.tuner.OptionAutoRun;</label>
+      <label for="autorun">&ubiquity.common.OptionAutoRun;</label>
 
     <br />
 
     <label for="gu-sync" title="&ubiquity.tuner.OptionParserTip;">
-      <input type="checkbox" id="gu-sync" checked="checked" />&ubiquity.tuner.OptionGSync;
+      <input type="checkbox" id="gu-sync" checked="checked" />&ubiquity.common.OptionGSync;
     </label>
   </div>
     
@@ -57,7 +57,7 @@
     <input id="root" class="input" />
   </div>
 		
-  <input type="button" id="run" value="&ubiquity.tuner.ButtonRun;"></input>
+  <input type="button" id="run" value="&ubiquity.common.ButtonRun;"></input>
 
   <h2>&ubiquity.tuner.HeaderSuggestions;</h2>
     
