--- a/ubiquity/chrome/content/tuner.xhtml
+++ b/ubiquity/chrome/content/tuner.xhtml
@@ -13,7 +13,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>Ubiquity Nountype Tuner</title>
+  <title>&ubiquity.pagetitle.Tuner;</title>
 
   <link rel="stylesheet" type="text/css" media="all" href="tuner.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
