--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -205,9 +205,9 @@
   <p>&ubiquity.editor.ShareCommandsParagraph2Part1; <a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiquity.editor.ShareCommandsParagraph2LinkText1;</a> &ubiquity.editor.ShareCommandsParagraph2Part2; <a href="https://ubiquity.mozilla.com/herd/">&ubiquity.editor.ShareCommandsParagraph2LinkText2;</a> &ubiquity.editor.ShareCommandsParagraph2Part3;</p>
 
   <h2>&ubiquity.editor.DevelopingUbiquity;</h2>
-  <p>&ubiquity.editor.DevelopingUbiquityParagraph1Part1; <a href="test.html">&ubiquity.editor.DevelopingUbiquityParagraph1LinkText;</a> &ubiquity.editor.DevelopingUbiquityParagraph1Part2;</p>
+  <p>&ubiquity.editor.DevelopingUbiquityParagraph1Part1; <a href="test.xhtml">&ubiquity.editor.DevelopingUbiquityParagraph1LinkText;</a> &ubiquity.editor.DevelopingUbiquityParagraph1Part2;</p>
   <p>&ubiquity.editor.DevelopingUbiquityParagraph2Part1; <a href="feed.xhtml#experimental-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph2LinkText;</a> &ubiquity.editor.DevelopingUbiquityParagraph2Part2;</p>
-  <p>&ubiquity.editor.DevelopingUbiquityParagraph3Part1; <a href="chrome://ubiquity/content/playpen.html">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText1;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part2; <a href="chrome://ubiquity/content/tuner.html">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText2;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part3;</p>
+  <p>&ubiquity.editor.DevelopingUbiquityParagraph3Part1; <a href="chrome://ubiquity/content/playpen.xhtml">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText1;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part2; <a href="chrome://ubiquity/content/tuner.xhtml">&ubiquity.editor.DevelopingUbiquityParagraph3LinkText2;</a> &ubiquity.editor.DevelopingUbiquityParagraph3Part3;</p>
   <p>&ubiquity.editor.DevelopingUbiquityParagraph4Part1; <a href="feed.xhtml#core-developer-commands.html">&ubiquity.editor.DevelopingUbiquityParagraph4LinkText;</a> &ubiquity.editor.DevelopingUbiquityParagraph4Part2;</p>
 </div>
 
