Heavy refactoring of the DTD files to cut back on fragmentation, support links and languages better. Moved all the links to the internal.dtd file for easy updating and also added a few other entities to support it all better.

--- a/ubiquity/chrome/content/about.xhtml
+++ b/ubiquity/chrome/content/about.xhtml
@@ -66,19 +66,13 @@
 
 <div class="col-four not-the-tutorial">
   <h2 class="top">&ubiqutiy.about.MoreOnUsingUbiquity;</h2>
-  <p>&ubiqutiy.about.UsingParagraph1Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Latest_Ubiquity_User_Tutorial">&ubiqutiy.about.UsingParagraph1LinkText;</a> &ubiqutiy.about.UsingParagraph1Part2;</p>
-  <p>&ubiqutiy.about.UsingParagraph2Part1; <a href="https://ubiquity.mozilla.com/herd/command-feed/">&ubiqutiy.about.UsingParagraph2LinkText1;</a> &ubiqutiy.about.UsingParagraph2Part2; <a href="https://ubiquity.mozilla.com/herd">&ubiqutiy.about.UsingParagraph2LinkText2;</a> &ubiqutiy.about.UsingParagraph2Part3;</p>
-  <p>&ubiqutiy.about.UsingParagraph3Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Roadmap">&ubiqutiy.about.UsingParagraph3LinkText;</a> &ubiqutiy.about.UsingParagraph3Part2;</p>
-  <p>&ubiqutiy.about.UsingParagraph4Part1; <a href="https://wiki.mozilla.org/Labs/Ubiquity/Credits">&ubiqutiy.about.UsingParagraph4LinkText;</a> &ubiqutiy.about.UsingParagraph4Part2;</p>
+  <p>&ubiqutiy.about.UsingParagraph1;</p>
+  <p>&ubiqutiy.about.UsingParagraph2;</p>
+  <p>&ubiqutiy.about.UsingParagraph3;</p>
+  <p>&ubiqutiy.about.UsingParagraph4;</p>
 
   <h2>&ubiqutiy.about.Thanks;</h2>
-  <p>
-    &ubiquity.about.ThanksParagraphPart1;
-    <a href="https://wiki.mozilla.org/Labs/Ubiquity/Ubiquity_0.5.4_Release_Notes">
-      &appTitle; <span class="version"></span>
-      &ubiquity.about.ThanksParagraphLinkText;</a>
-    &ubiquity.about.ThanksParagraphPart2;
-  </p>
+  <p>&ubiquity.about.ThanksParagraph;</p>
 </div>
 
 <br clear="all" />
