--- a/ubiquity/chrome/content/bug19warning.xhtml
+++ b/ubiquity/chrome/content/bug19warning.xhtml
@@ -32,12 +32,12 @@
   <div id="errorLongContent">
 
     <div id="errorShortDesc">
-      <p>&ubiquity.bug19warning.Paragraph1;</p>
+      <p>&ubiquity.bug19warning.ShortDesc;</p>
     </div>
 
     <div id="errorLongDesc">
-      <p>&ubiquity.bug19warning.Paragraph2Part1; <a href="http://ubiquity.mozilla.com/trac/ticket/19">&ubiquity.bug19warning.Paragraph2LinkText1;</a> &ubiquity.bug19warning.Paragraph2Part2; <a href="http://growl.info/">&ubiquity.bug19warning.Paragraph2LinkText2;</a> &ubiquity.bug19warning.Paragraph2Part3;</p>
-      <p>&ubiquity.bug19warning.Paragraph3;</p>
+      <p>&ubiquity.bug19warning.LongDescParagraph1;</p>
+      <p>&ubiquity.bug19warning.LongDescParagraph2;</p>
     </div>
 
   </div>
