--- a/ubiquity/chrome/content/support.xhtml
+++ b/ubiquity/chrome/content/support.xhtml
@@ -39,9 +39,9 @@
 <div class="col-five">
   <h2 class="top">&ubiquity.support.GetHelp;</h2>
   <p>&ubiquity.support.GetHelpParagraph1;</p>
-  <p><a href="http://getsatisfaction.com/mozilla/products/mozilla_ubiquity">&ubiquity.support.GetHelpGSFN;</a> &ubiquity.support.GetHelpParagraph2;</p>
-  <p><a href="http://groups.google.com/group/ubiquity-firefox">&ubiquity.support.GetHelpGoogleGroups;</a> &ubiquity.support.GetHelpParagraph3;</p>
-  <p><a href='https://wiki.mozilla.org/Labs/Ubiquity'>&ubiquity.support.GetHelpUbiquityWiki;</a> &ubiquity.support.GetHelpParagraph4;</p>
+  <p>&ubiquity.support.GetHelpParagraph2;</p>
+  <p>&ubiquity.support.GetHelpParagraph3;</p>
+  <p>&ubiquity.support.GetHelpParagraph4;</p>
 </div>
 
 <div class="col-four">
@@ -49,7 +49,7 @@
   <p>&ubiquity.support.ReportBugsParagraph1;</p>
 
   <h2>&ubiquity.support.ResetUbiquity;</h2>
-  <p>&ubiquity.support.ResetUbiquityParagraph1Part1; <a href='reset.xhtml'>&ubiquity.support.ResetUbiquityParagraph1LinkText;</a> &ubiquity.support.ResetUbiquityParagraph1Part2;</p>
+  <p>&ubiquity.support.ResetUbiquityParagraph1;</p>
 </div>
 
 </body>
