--- a/ubiquity/chrome/content/localization-template.xhtml
+++ b/ubiquity/chrome/content/localization-template.xhtml
@@ -33,23 +33,23 @@
   <br clear="all" />
 
   <div style="text-align:center;">
-    <p>&ubiquity.localizecmd.ForTemplate; <code><span class="feedKey"></span>.po</code> | <a id="show-hide-help" onclick=""></a></p>
+    <p>&ubiquity.localizecmd.ForTemplate; | <a id="show-hide-help" onclick=""></a></p>
   </div>
 
   <div id="help-div" class="ubiq-tutorial" style="display:none;font-size:100%">
     <ul>
       <li>
-        <p>&ubiquity.localizecmd.HelpParagraph1Part1; <span class="feedKey"></span> &ubiquity.localizecmd.HelpParagraph1Part2; <a href="http://en.wikipedia.org/wiki/Gettext">&ubiquity.localizecmd.HelpParagraph1LinkText;</a> &ubiquity.localizecmd.HelpParagraph1Part3;</p>
+        <p>&ubiquity.localizecmd.HelpParagraph1;</p>
       </li>
       <li>
-        <p>&ubiquity.localizecmd.HelpParagraph2Part1; <code><span class='localization-dir'></span></code> &ubiquity.localizecmd.HelpParagraph2Part2; <code><span class="feedKey"></span>.po</code></p>
+        <p>&ubiquity.localizecmd.HelpParagraph2;</p>
         <p>&ubiquity.localizecmd.HelpParagraph3;</p>
       </li>
     </ul>
   </div>
 
   <div>
-    <textarea id="template" rows='30' style='width:100%'></textarea>
+    <textarea id="template" rows="30" style="width: 100%"></textarea>
   </div>
 </body>
 </html>
