--- a/ubiquity/chrome/content/settings.xhtml
+++ b/ubiquity/chrome/content/settings.xhtml
@@ -78,10 +78,11 @@
   <p><span id="lang-settings-changed-info"></span></p>
   <p>&ubiquity.settings.SelectLanguage; <select id="language-select" onchange="changeLanguageSettings();"></select></p>
   
-  <h2>Notification Settings</h2>
-  <p>Ubiquity makes extensive use of transparent non-modal notifications. On OS X, it's shown using Growl. On Windows, it shows up as <a href="http://www.fullphat.net/index.php">Snarl</a> notifications, <a href="http://growlforwindows.com/gfw/">Growl for Windows</a> notifications or "toaster" notifications at the bottom-right of the screen. If you have <a href="http://www.fullphat.net/index.php">Snarl</a> installed and running, Ubiquity will automatically detect and use it to send notifications.</p>
-  <p>If you want to use Growl on Windows, check the box below:</p><p><label for='gfw' style='font-weight:bold;'> Use Growl for Windows </label><input type='checkbox' name='gfw' value='gfw' id='gfw' /></p><p id='gfw-warning' style='display:none;color:#922233'>Make sure Growl for Windows is open. If not, you will not receive any notifications.</p>
-  <p>To get <a href="http://www.markshuttleworth.com/archives/265">libnotify notifications</a> working on Linux, you need to install libnotify-bin using the Synaptic Package Manager on Ubuntu or run "sudo aptitude install libnotify-bin" for all distros.</p>
+  <h2>&ubiquity.settings.NotificationSettings;</h2>
+  <p>&ubiquity.settings.NotificationParagraph1;</p>
+  <p><label for="gfw"><input type="checkbox" name="gfw" value="gfw" id="gfw" /><strong>&ubiquity.settings.NotificationEnable;</strong></label></p>
+  <p id="gfw-warning" style="display:none; color:#922233">I&ubiquity.settings.NotificationWarning;</p>
+  <p>&ubiquity.settings.NotificationLinuxNote;</p>
 
   <h2>&ubiquity.settings.MiscSettings;</h2>
   <p>&ubiquity.settings.MaxSuggestions; <input type="text" id="max-suggestions" size="3" style="text-align:center" /></p>
@@ -107,7 +108,7 @@
     <li><a class="button" onclick="saveCustomSkin()">&ubiquity.settings.SaveSkin;</a> <a class="button" onclick="saveAs()">&ubiquity.settings.SaveSkinAs;</a> <a class="button" onclick="pasteToGist()">&ubiquity.settings.ShareSkin;</a> &ubiquity.settings.SaveNotice;</li>
 
     <br /><br />
-    <div class="warning">&ubiquity.settings.Bug449WarningPart1; <a href='http://ubiquity.mozilla.com/trac/ticket/449'>&ubiquity.settings.Bug449WarningLinkText;</a> &ubiquity.settings.Bug449WarningPart2;</div>
+    <div class="warning">&ubiquity.settings.Bug449Warning;</div>
     <br /><br />
 
     <li><textarea rows="30" style="width:92%" id="skin-editor"></textarea></li>
