--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -26,6 +26,8 @@
     <li><a class="intra-wiki"
            href="#modules/contextutils.js">ContextUtils</a></li>
     <li><a class="intra-wiki"
+           href="#modules/dbutils.js">DbUtils</a></li>
+    <li><a class="intra-wiki"
            href="#modules/eventhub.js">EventHub</a></li>
     <li><a class="intra-wiki"
            href="#modules/webjsm.js">WebJsModule</a></li>
