--- a/ubiquity/index.html
+++ b/ubiquity/index.html
@@ -18,6 +18,8 @@
   <p>Here is what we've got for documentation so far.</p>
   <ul>
     <li><a class="intra-wiki"
+           href="#chrome/content/ubiquity.js">Ubiquity</a></li>
+    <li><a class="intra-wiki"
            href="#modules/utils.js">Utils</a></li>
     <li><a class="intra-wiki"
            href="#modules/cmdutils.js">CmdUtils</a></li>
