weather: I'm calling myself the author of weather. let me know if anyone has qualms with that.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -1088,6 +1088,10 @@ function yahooWeatherImage(condition,dayOrNight) {
 
 CmdUtils.CreateCommand({
   names: ["check weather", "get weather", "weather"],
+  author: {
+      name: "mitcho (Michael Yoshitaka Erlewine)",
+      email: "mitcho@mitcho.com"
+  },
   arguments: {location: noun_type_geo_town,
               format: noun_type_temperature_units},
   icon: "chrome://ubiquity/skin/icons/wunderground.ico",
