yelp: now uses noun_type_geo_town. Seems to be working fine.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -915,7 +915,7 @@ CmdUtils.CreateCommand({
   names: ["yelp"],
   arguments: [
     {role: "object", label: "restaurant", nountype: noun_type_async_restaurant},
-    {role: "location", nountype: noun_type_async_address}
+    {role: "location", nountype: noun_type_geo_town}
   ],
   icon: "chrome://ubiquity/skin/icons/yelp.ico",
   description: "Searches <a href=\"http://www.yelp.com\">Yelp</a> for restaurants matching your words.  Previews the top results.",
