--- a/ubiquity/chrome/content/file.xhtml
+++ b/ubiquity/chrome/content/file.xhtml
@@ -11,54 +11,37 @@
 ]>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
   <title>&ubiquity.redirect.FileHeader;</title>
   <link rel="icon" type="image/png" id="favicon" href="chrome://global/skin/icons/information-16.png"/>
   <link rel="stylesheet" href="chrome://global/skin/netError.css" type="text/css" media="all" />
   <link rel="stylesheet" href="chrome://ubiquity/content/ubiquityError.css" type="text/css" media="all" />
-
 </head>
 <body dir="&locale.dir;" class="information">
-
-<script type="text/javascript">
-  <![CDATA[
-
+<script type="text/javascript"><![CDATA[
   Components.utils.import("resource://ubiquity/modules/setup.js");
 
-  function maybeRedirect() {
-    if (window.location.hash) {
-      var relPath = window.location.hash.slice(1);
-      var fileUrl = UbiquitySetup.getBaseUri() + relPath;
-      window.location = fileUrl;
+  (function maybeRedirect() {
+    if (/#(.*)/.test(location)) {
+      var relPath = RegExp.$1 || "index.html";
+      location = UbiquitySetup.getBaseUri() + relPath;
     }
-  }
-
-  maybeRedirect();
-  window.setInterval(maybeRedirect, 100);
-
-  ]]>
-</script>
-
+    else setTimeout(maybeRedirect, 100);
+  })();
+]]></script>
 <div id="errorPageContainer">
   <div id="errorTitle"><h1>&ubiquity.redirect.FileHeader;</h1></div>
-
   <div id="errorLongContent">
-
     <div id="errorShortDesc">
       <p>&ubiquity.redirect.FileShortDesc;</p>
     </div>
-
     <div id="errorLongDesc">
       <p>&ubiquity.redirect.FileLongDesc;</p>
-
       <ul>
         <li><a href="&file.DevelDocs;">&file.DevelDocs;</a></li>
       </ul>
-
     </div>
   </div>
 </div>
-
 </body>
 </html>
