cmdlist: Now dehighlights the selected sort-mode link.
--HG--
extra : rebase_source : e0f3323f93aa5233b5d637089c6776ccec3a5530

--- a/ubiquity/chrome/content/cmdlist.xhtml
+++ b/ubiquity/chrome/content/cmdlist.xhtml
@@ -55,7 +55,15 @@
       <th width="70%" colspan="2">&ubiquity.commandlist.AvailableCommands;</th></tr>
     <tr>
       <td colspan="3">
-        &ubiquity.commandlist.SortBy; <a onclick="changeSortMode('feed');">&ubiquity.commandlist.SortByFeed;</a> | <a onclick="changeSortMode('feed-date');">&ubiquity.commandlist.SortByDate;</a> | <a onclick="changeSortMode('enabled');">&ubiquity.commandlist.SortByEnabled;</a> | <a onclick="changeSortMode('cmd');">&ubiquity.commandlist.SortByCommand;</a>
+        &ubiquity.commandlist.SortBy;
+        <a class="sort-switch" value="feed"
+          >&ubiquity.commandlist.SortByFeed;</a> |
+        <a class="sort-switch" value="feed-date"
+          >&ubiquity.commandlist.SortByDate;</a> |
+        <a class="sort-switch" value="enabled"
+          >&ubiquity.commandlist.SortByEnabled;</a> |
+        <a class="sort-switch" value="cmd"
+          >&ubiquity.commandlist.SortByCommand;</a>
       </td>
     </tr>
   </thead>
