about:ized commands. Added missing base elements.

--- a/ubiquity/chrome/content/localization-template.xhtml
+++ b/ubiquity/chrome/content/localization-template.xhtml
@@ -15,6 +15,8 @@
 <head>
   <title>&ubiquity.pagetitle.LocalizeCmd;</title>
 
+  <base href="chrome://ubiquity/content" />
+
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
   <link rel="stylesheet" href="web-content.css" type="text/css" />
 
