--- a/ubiquity/chrome/content/test.xhtml
+++ b/ubiquity/chrome/content/test.xhtml
@@ -15,6 +15,8 @@
 <head>
   <title>&ubiquity.pagetitle.TestSuite;</title>
 
+  <base href="chrome://ubiquity/content" />
+
   <link rel="stylesheet" type="text/css" media="all" href="test.css" />
   <link rel="stylesheet" type="text/css" media="all" href="web-content.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
