--- a/ubiquity/chrome/content/playpen.xhtml
+++ b/ubiquity/chrome/content/playpen.xhtml
@@ -15,6 +15,8 @@
 <head>
   <title>&ubiquity.pagetitle.PlayPen;</title>
 
+  <base href="chrome://ubiquity/content" />
+
   <link rel="stylesheet" type="text/css" media="all" href="playpen.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
