--- a/ubiquity/chrome/content/tuner.xhtml
+++ b/ubiquity/chrome/content/tuner.xhtml
@@ -15,6 +15,8 @@
 <head>
   <title>&ubiquity.pagetitle.Tuner;</title>
 
+  <base href="chrome://ubiquity/content" />
+
   <link rel="stylesheet" type="text/css" media="all" href="tuner.css" />
   <link rel="icon" type="image/x-icon" id="favicon" href="chrome://ubiquity/skin/icons/favicon.ico" />
 
