--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -23,40 +23,19 @@
 
   <script type="application/javascript;version=1.8" src="chrome://ubiquity/content/developer-news.js"></script>
   <script type="application/javascript;version=1.8" src="editor.js"></script>
+  <script type="application/javascript" src="bespin-embedded.js"></script>
   <script type="application/javascript;version=1.8" src="resource://ubiquity/scripts/codemirror/js/codemirror.js"></script>
 
   <script type="text/javascript">
   <![CDATA[
-    const PREF_ENABLE_HIGHLIGHTING = "extensions.ubiquity.editor_highlighting";
-
-    // Workaround for #437.
-    function isSyntaxHighlightingBroken() {
-      var appInfo = Components.classes["@mozilla.org/xre/app-info;1"].getService(Components.interfaces.nsIXULAppInfo);
-      var versionChecker = Components.classes["@mozilla.org/xpcom/version-comparator;1"].getService(Components.interfaces.nsIVersionComparator);
-      if (versionChecker.compare(appInfo.version, "3.1b1") >= 0)
-        return true;
-      else
-        return false;
-    }
-
-    function getHighlighting() {
-      if (isSyntaxHighlightingBroken())
-        return false;
-      else
-        return Application.prefs.getValue(PREF_ENABLE_HIGHLIGHTING, true);
-    }
-
     var file; 
     var lastModifiedTime = 0; 
     function initialize() {
       document.getElementById("feedTypeMenu").value = PrefCommands.type;
-      document.getElementById("editor").value = PrefCommands.getCode();
-      document.getElementById("enableSyntaxHighlighting").checked = getHighlighting();
-      if (isSyntaxHighlightingBroken())
-        $("#editor-options").hide();
+      document.getElementById("editor-div").innerHTML = PrefCommands.getCode();
     }
     function launch() { 
-      file = Editor.launchEditor(document.getElementById('editor').editor.editor.getCode()); 
+      file = Editor.launchEditor(document.getElementById('editor-div')._editor.getContent()); 
       if (file != null && file.exists()) { 
         lastModifiedTime = file.lastModifiedTime; 
         setTimeout(watchFile, 500) 
@@ -66,65 +45,26 @@
       if (file != null && file.exists()) { 
         time = file.lastModifiedTime; 
         if (time > lastModifiedTime) {
-          document.getElementById('editor').editor.setCode(Editor.readFile(file)); 
-          PrefCommands.setCode(document.getElementById('editor').editor.editor.getCode()); 
+          document.getElementById('editor-div')._editor.setContent(Editor.readFile(file)); 
+          PrefCommands.setCode(document.getElementById('editor-div')._editor.getContent()); 
           lastModifiedTime = time;
         }
         setTimeout(watchFile, 500);
       }
     }
-    function highlight() {
-      //TODO: doing syntax highlighting breaks the editor, so we're always
-      //skipping the syntax highlighting for now. See if we can
-      //fix this at some point.
-      if(true || !getHighlighting()) {
-        setupTextarea();
-        return;
-      }
-      var textarea = document.getElementById("editor");
-      try {
-        var editor = new CodeMirror(CodeMirror.replace(textarea), {
-            height: textarea.clientHeight,
-            content: textarea.value,
-            parserfile: ["tokenizejavascript.js", "parsejavascript.js"],
-            stylesheet: "resource://ubiquity/scripts/codemirror/css/jscolors.css",
-            path: "resource://ubiquity/scripts/codemirror/js/",
-            autoMatchParens: true,
-            undoDelay: 100,
-            onChange: function() { PrefCommands.setCode(editor.getCode()) },
-            initCallback: function() { editor.win.focus(); editor.jumpToLine(1); },
-            height: textarea.clientHeight+"px"
-          });
-        var iframe = document.getElementsByTagName("iframe")[0];
-        iframe.setAttribute("id", "editor");
-        iframe.editor = editor;
-        window.addEventListener("unload", function() { PrefCommands.setCode(editor.getCode()); }, false);
-      } catch (e) { // Setup matching API for the normal textarea
-        Components.utils.reportError("CodeMirror failed to load: "+e);
-        displayMessage("Error: CodeMirror failed to load: " + e);
-
-        setupTextarea();
-      }
-    }
-    function setupTextarea() {
-      var textarea = document.getElementById("editor");
-      textarea.editor = new Object();
-      textarea.editor.editor = new Object();
-      textarea.editor.editor.getCode = function() { return textarea.value; };
-      textarea.editor.getCode = textarea.editor.editor.getCode;
-      textarea.editor.editor.setCode = function(d) { textarea.value = d; };
-      textarea.editor.setCode = textarea.editor.editor.setCode;
-      textarea.focus();
-    }
-    function enableSyntaxHighlighter(enabled) {
-      Application.prefs.setValue(PREF_ENABLE_HIGHLIGHTING, enabled);
-      window.location.reload();
-    }
+    window.addEventListener("load",
+                            function() {
+                              initialize();
+                              var editor = new BespinEditor();
+                              editor.initUI('editor-div', window);
+                            },
+                            false
+    );  
   ]]>
   </script>
 
 </head>
-<body dir="&locale.dir;" onload="initialize(); Editor.onLoad(); highlight();">
+<body dir="&locale.dir;">
 
 <div class="head">&ubiquity.tagline.HackUbiquity;</div>
 
@@ -156,6 +96,7 @@
 
 <div id="editor-actions">
   <br clear="all" />
+  <div id="editor-log"></div>
 
   <div id="external-editor-pref">
     &ubiquity.editor.YourExternalEd;
@@ -188,14 +129,10 @@
   <br clear="all" />
 
   <div id="editor-options">
-    <label for="enableSyntaxHighlighting">
-      <input type="checkbox" id="enableSyntaxHighlighting" onchange="enableSyntaxHighlighter(this.checked);"/> &ubiquity.editor.EnableHighlighting;
-    </label>
   </div>
 </div>
 
-<div id="editor-div">
-  <textarea id="editor" rows="40" style="width:99%"></textarea>
+<div id="editor-div" style="height: 500px;">
 </div>
 
 <br clear="all" />
