Added prompt before share (experimental). Prevented page scroll over embedded Bespin.
--HG--
extra : rebase_source : eb8f87bc18d2117f45a5f55caf73ee065886a831

--- a/ubiquity/chrome/content/settings.xhtml
+++ b/ubiquity/chrome/content/settings.xhtml
@@ -99,7 +99,12 @@
 <div id="editor-div" style="display:none">
   <h2>&ubiquity.settings.CustomSkin;</h2>
   <ul class="button-list">
-    <li><a class="button" onclick="saveCustomSkin()">&ubiquity.settings.SaveSkin;</a> <a class="button" onclick="saveAs()">&ubiquity.settings.SaveSkinAs;</a> <a class="button" onclick="pasteToGist()">&ubiquity.settings.ShareSkin;</a> &ubiquity.settings.SaveNotice;</li>
+    <li>
+      <a class="button" onclick="saveCustomSkin()">&ubiquity.settings.SaveSkin;</a>
+      <a class="button" onclick="saveAs()">&ubiquity.settings.SaveSkinAs;</a>
+      <a class="button" onclick="shareSkin()">&ubiquity.settings.ShareSkin;</a>
+      &ubiquity.settings.SaveNotice;
+    </li>
 
     <br /><br />
     <div class="warning">&ubiquity.settings.Bug449Warning;</div>
